--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,14 @@
 <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
+
+        const data = fetch('https://gentle-dusk-09201.herokuapp.com/data', {
+            method: 'GET',
+            headers: { 'Content-Type': 'application/json' },
+        }).then(response => response.json());
+
+        console.log('data', data);
+
         google.charts.load("current", {
             "packages": ["map"],
             "mapsApiKey": "AIzaSyBw5mv9E4Zwgrawf-ASEXtno4K6t3k-wWg"
