--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,32 +5,42 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
 
-        const data = fetch('https://gentle-dusk-09201.herokuapp.com/data', {
+        const api = fetch('https://gentle-dusk-09201.herokuapp.com/data', {
             method: 'GET',
             headers: { 'Content-Type': 'application/json' },
-        }).then(response => response.json());
-
-        console.log('data', data);
-
-        google.charts.load("current", {
-            "packages": ["map"],
-            "mapsApiKey": "AIzaSyBw5mv9E4Zwgrawf-ASEXtno4K6t3k-wWg"
+        }).then(response => {
+            return response.json();
+        }).then((data) => {
+            const points = serialize(data);
+            draw(points);
         });
-        google.charts.setOnLoadCallback(drawChart);
-        function drawChart() {
-            var data = google.visualization.arrayToDataTable([
-                ['Lat', 'Long', 'Name'],
-                [37.4232, -122.0853, 'Work'],
-                [37.4289, -122.1697, 'University'],
-                [37.6153, -122.3900, 'Airport'],
-                [37.4422, -122.1731, 'Shopping']
-            ]);
 
-            var map = new google.visualization.Map(document.getElementById('map_div'));
-            map.draw(data, {
-                showTooltip: true,
-                showInfoWindow: true
+        function serialize(data) {
+            const result = [['Lat', 'Long', 'Message']]
+            const points = data.map(item => {
+                return [ parseFloat(item.lat), parseFloat(item.lon), `userId: ${item.userId} \r\n placeId: ${item.placeId}`]
             });
+
+            result.push(...points)
+            return result;
+        }
+
+        function draw(points) {
+            google.charts.load("current", {
+                "packages": ["map"],
+                "mapsApiKey": "AIzaSyBw5mv9E4Zwgrawf-ASEXtno4K6t3k-wWg"
+            });
+            google.charts.setOnLoadCallback(drawChart);
+            function drawChart() {
+                var data = google.visualization.arrayToDataTable(points);
+
+                var map = new google.visualization.Map(document.getElementById('map_div'));
+                map.draw(data, {
+                    showTooltip: true,
+                    showInfoWindow: true
+                });
+            }
+
         }
 
     </script>
