--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
 
-        const api = fetch('https://gentle-dusk-09201.herokuapp.com/data', {
+        const api = fetch('http://localhost:5000/data', {
             method: 'GET',
             headers: { 'Content-Type': 'application/json' },
         }).then(response => {
